Fixed spacing issues in the Others section

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -150,6 +150,8 @@
 	}
 	.interior_inner .interior_text {
 		margin-top: 30px;
+		margin-right: 16px;
+		margin-left: 16px
 	}
 	.interior_two .interior_inner .interior_text {
 		margin-top: 0px;
@@ -233,6 +235,7 @@
 	.blog_banner .banner_inner .blog_b_text {
 		margin-top: 38px;
 	}
+
 	.home_banner_area .banner_inner .banner_content {
 		flex-direction: column-reverse;
 	}
