--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,7 @@ h6 {
     padding-right: 30px;
     border-radius: 5px;
     margin-right: 16px;
+    margin-bottom: 16px;
 }
 
 .main_btn:hover {
